Setup a template to make it easier to create new questions.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "url": "https://github.com/roddeh/kids-maths/issues"
   },
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "server": "./server.rb public 3004"
   },
   "repository": {
     "type": "git",
